# devenv

./: .gitignore  Dockerfile.devenv  README.md  devenv.build  devenv.run  env.sh
images/: Dockerfile.dracut  Dockerfile.rootfs  Makefile
images/files/rootfs/: autologin.conf  enp0s2.network  proj.mount
scripts/: lib  network.sh  run-nopti.sh  run-smap.sh  run.sh
tools/: CMakeLists.txt
tools/microtester/: CMakeLists.txt
tools/microtester/src/: kerncall.c  kerncall.h  main.c
